	 scaler support (Stuart).
20070603 configure.in: link with -mwindows for Win32 UI, and remove -lcomdlg32
	 and -lgdi32 as these are automatically linked by -mwindows (Stuart).
20070603 ui/win32/{win32internals.h,win32ui.c}: add support for loading files
	 using drag-and-drop in Win32 UI (Stuart).
20070603 ui/win32/win32ui.c: use modal fileselectors for the Win32 UI (Stuart).
20070604 ui/win32/{win32display.{c,h},win32internals.h}: remove redundant
	 DirectDraw definitions and replace references to DirectDraw with GDI
	 in initial comments (Stuart).
20070604 ui/win32/win32ui.c: implement some more menu callbacks (Stuart).
20070605 compat.h,compat/{getopt.c,getopt1.c},settings.pl: disable use of
         getopt_long on Amiga due to incompatibility of our replacement with
         the GNU getopt in their c library (part of patch #1712260) (Fred).
20070606 man/fuse.1: indentation fixes (Stuart).
20070606 man/fuse.1: various formatting fixes (Stuart).
20070606 man/fuse.1: spelling fixes (Stuart).
20070608 widget/filesel.c: use more native ASL requester on the Amiga in the
         widget UI (more of patch #1712260) (Chris Young).
20070608 widget/pokefinder.c: fix up printf() related warnings (Fred).
20070608 machines: ignore .a archive files (Fred).
20070608 widget/menu.c: fix bug in menu_get_{open,save}_filename() (Stuart).
20070608 ui/xlib: ignore .a archive files (Fred).
20070608 man/fuse.1: fix dashes (Stuart).
20070608 sound/alsasound.c: update FSF address (Stuart).
20070609 profile.c: fix printf() warning.
20070610 event.[ch],spectrum.c,rzx.[ch],ula.h: add RZX "sentinel" event to
	 prevent running off the end of the contention array on very long
	 frames (see bug #1057471).
20070610 widget/{memory.c,pokefinder.c,widget_internals.h}: fix up warnings.
20070610 widget/error.c: don't try and output widgets if we don't have a
	 display yet (fixes bug #1718115).
20070610 man/fuse.1: remove outdated widget-specific sections (Stuart).