@@ -258,7 +258,7 @@ uidisplay_area( int x, int y, int w, int h )
   scaled_x = scale * x; scaled_y = scale * y;
 
   /* Create scaled image */
-  scaler_proc16( (libspectrum_byte*)&svgadisplay_image[y][x], display_pitch,
+  scaler_proc16( (libspectrum_byte*)&svgadisplay_image[y][x], svgadisplay_pitch,
 		 (libspectrum_byte*)&scaled_image[scaled_y][scaled_x],
 		 scaled_pitch, w, h );
 
